--- a/css/style.css
+++ b/css/style.css
@@ -7,16 +7,16 @@ html {
     max-width: 1000px !important;
     padding: 20px 20px 40px 20px;
     border-radius: 15px;
-    color: #fff;
+    color: #6bf172;
     font-size: 18px !important;
     margin: 0 auto;
-  }
-  #exercisecontainer p {
-      font-size: 24px !important;
-      margin: 5px;
-  }
-  #exercisecontainer li {
-      text-align: left;
-      font-size: 18px !important;
-      margin: 5px;
-  }
+}
+#exercisecontainer p {
+    font-size: 24px !important;
+    margin: 5px;
+}
+#exercisecontainer li {
+    text-align: left;
+    font-size: 18px !important;
+    margin: 5px;
+}
